--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,24 @@
       rel="stylesheet"
     />
     <title>Facebook Leads Analyzer</title>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1743296116527896',
+          cookie     : true,
+          xfbml      : true,
+          version    : 'v18.0'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "https://connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
